# jtg-spec-server

./: .dockerignore  .env_example  Dockerfile  README.md  app.py  app_factory.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  spec_app.py  test.py
completeions/: base.py  document_filter.py  gateway.py  graph_query.py  prompt_factory.py  query_analysis.py  spec_expert.py
completeions/prompts/: document_filter.md  gateway.md  graph_query.md  query_analysis.md  spec_expert.md
configs/: __init__.py  app_config.py
configs/feature/: __init__.py
configs/middleware/: __init__.py
contexts/: __init__.py
controllers/document/: __init__.py  doc_filter.py
controllers/graph/: __init__.py  index.py
controllers/json/: __init__.py  index.py
controllers/segment/: __init__.py  index.py
controllers/spec/: index.py
controllers/symbol/: __init__.py  index.py
enums/: audit_status.py  document_category.py  document_keyword.py  document_stage.py  document_subcategory.py  document_type.py  graph_query_type.py  search_strategy.py
extensions/: ext_blueprints.py  ext_celery.py  ext_logging.py  ext_timezone.py
graph/: graph.py  graph_factory.py
libs/: auth.py  external_api.py
models/: document_filter.py  gateway_result.py  graph_path.py  graph_query.py  knowledge_subgraph.py  query_analysis_result.py
retrieval/: combined_retrieval.py  graph_rag_retrieval.py  hybrid_retrieval.py
services/: spec_service.py  symbol_service.py  term_service.py
utils/: dict_util.py  dify_util.py  enum_util.py  text_util.py
workflow/: index.py
(+10 files in other folders)
